# trim-template

./: .gitignore  CHANGELOG.md  LICENSE  README.md  USAGE.md  file.slim  pyproject.toml  render.py  setup.py  test.py  test.slim  test_if_else_logic.py  test_if_logic.py
.github/workflows/: run_tests.yml
examples/: basic_example.py  file.html  file.html.trim  footer.html.trim  header.html.trim  main.html.trim  simple_test.py  sub_template_example.py  user_card.html.trim
skimpy/: __init__.py  node.py  node_parser.py  skimpy.py
tests/: .___pycache__  test_boolean_attributes.py  test_comments.py  test_embedded_css.py  test_embedded_js.py  test_if_else_logic.py  test_if_logic.py  test_loop.py  test_nested_variables.py  test_node_linking.py  test_read_file.py  test_sub_templates.py  test_tag_attributes.py  test_tag_whitespace.py  test_vars.py
tests/fixtures/: basic_template.html.trim  basic_template.skml  menu.skml  readable_template.skml
trim/: node_parser.py  trim.py
trim_template/: __init__.py  node.py  node_parser.py
