[tool.poetry]
name = "trim-template"
version = "0.1.2"
description = "A templating engine inspired by Ruby's Slim template engine"
authors = ["David Kelly"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/opensourceme/trim-template"
keywords = ["template", "trim", "engine", "html"]

[project]
name = "trim-template"
version = "0.1.0"
description = "A templating engine inspired by Ruby's Slim template engine"
authors = [
    {name = "David Kelly", email = "info@futuresbright.com"}
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.2"
bs4 = "^0.0.2"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/opensourceme/trim-template"
Issues   = "https://github.com/opensourceme/trim-template/issues"